revert changes in tests classes